--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quick-dash-engine",
+  "name": "@quick-dash-engine",
   "version": "1.0.0",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
